# neon

./: .eslintrc.cjs  .gitignore  .gitmodules  .swiftformat  LICENSE  README.md  build-app.hxml  build-browser.hxml  build-cpp.hxml  build-game.hxml  build-heaps.hxml  build-osx.hxml  build-site.hxml  build-ssr.hxml  build.hxml  haxelib.json  index.css  index.html  index.js  package.json  sst.config.ts  submit.sh  vite.config.ts
app/: CMakeLists.txt  Info.plist  generate.sh
app/native/include/: Bridge.h  Bridging-Header.h  NeonBridge.h  NeonCore.h  NeonRenderer.h
app/native/src/: AppDelegate.swift  Bridge.cpp  NeonBridge.cpp  NeonCore.cpp  NeonElement.swift  NeonRenderer.cpp  NeonSignal.swift  NeonText.swift  NeonView.swift  SceneDelegate.swift  StyleUtils.swift  UIExtensions.swift
app/src/: Main.hx
app/src/neon/core/: Common.hx  Element.hx  Node.hx  Renderer.hx  State.hx  _State.hx
app/src/neon/platform/catalyst/: Renderer.hx  System.hx
app/src/neon/platform/swiftui/: Renderer.hx
app/src/neon/yoga/: Types.hx
app/src/neon/yoga/browser/: Node.hx
app/src/neon/yoga/native/: Node.hx
demo/: CMakeLists.txt  Info.plist  build.hxml
demo/native/include/: Bridging-Header.h  Core.h
demo/native/src/: App.swift  AppDelegate.swift  Application.swift  Bridge.cpp  ContentView.swift  Core.cpp
demo/src/: Main.hx
demo/src/neon/core/: Element.hx
demo/src/neon/platform/swiftui/bridge/: NativeView.hx
demo/src/neon/platform/swiftui/native/: Render.swift
iOS/: Project.swift  buildServer.json
iOS/Hype/Sources/: App.swift  Bridging-Header.h  ContentView.swift  Core.cpp  Core.h  Helper.swift
iOS/Hype/Tests/: HypeTests.swift
iOS/Tuist/: Package.swift
lib/cmake/: final-touch.rb
lib/neon/catalyst/Sources/NeonLib/: NeonLib.swift
src/app/: Main.hx
src/app/neon/core/: Common.hx  Helper.hx  Renderer.hx
src/app/neon/yoga/: Node.hx
src/app/neon/yoga/browser/: Node.hx
src/demo/: khafile.js
src/demo/Assets/: document.rml  style.rcss
src/demo/Libraries/neon/: korefile.js
src/demo/Libraries/neon/Sources/neon/: Neon.hx  RmlNeon.hx
src/demo/Libraries/neon/Sources/neon/rml/: Context.hx  ElementDocument.hx  RenderInterface.hx  RenderManager.hx  TextInputHandler.hx
src/demo/Libraries/neon/ios/: NeonKore.h  NeonKore.mm  RmlKhaBackend.cpp  RmlKhaRender.h  RmlUiBackend.h
src/demo/Sources/: Main.hx
src/game/: Main.hx
src/game/components/: Game.hx
src/heaps/: Main.hx
src/neon/: Main.hx
src/neon/browser/: Render.hx
src/neon/core/: Builder.hx  Common.hx  Element.hx  Event.hx  Helper.hx  Renderer.hx  State.hx  Style.hx  SvgElement.hx
src/neon/macro/: Render.hx
src/neon/parser/: CssSelector.hx  HtmlAttribute.hx  HtmlDocument.hx  HtmlLexem.hx  HtmlNode.hx  HtmlNodeElement.hx  HtmlNodeText.hx  HtmlParser.hx  HtmlParserException.hx  HtmlParserTools.hx  HtmlTools.hx  XmlAttribute.hx  XmlBuilder.hx  XmlDocument.hx  XmlNode.hx  XmlNodeElement.hx  XmlNodeText.hx  XmlParser.hx
src/neon/platform/: Renderer.hx
src/neon/platform/apple/: Main.hx
src/neon/platform/browser/: Helper.hx  Renderer.hx
src/neon/platform/heaps/: Renderer.hx
src/neon/platform/ssr/: Renderer.hx
src/neon/platform/web/: Helper.hx  Renderer.hx
src/neon/runtime/: Lambda.hx
src/neon/state/: Effect.hx  Signal.hx
src/neon/web/: Client.hx  Helper.hx  Server.hx
src/site/: Main.hx  stack.ts
src/site/components/: App.hx  Branding.hx  Icons.hx  Navigator.hx
src/ssr/: Main.hx
